# CPP

./: .gitignore  CMakeLists.txt  README.md
clion_version/module_00/ev/: ContactClass.hpp  PhonebookClass.cpp  phonebook
clion_version/module_00/ex00/: CMakeLists.txt  Makefile  megaphone  megaphone.cpp
clion_version/module_00/ex01/: CMakeLists.txt  ContactClass.hpp  Makefile  Phonebook.cpp
clion_version/module_00/ex02/: Account.cpp  CMakeLists.txt  Makefile
clion_version/module_01/m1ex00/: CMakeLists.txt  main.cpp  newZombie.cpp
clion_version/module_01/m1ex01/: main.cpp
clion_version/module_01/m1ex02/: CMakeLists.txt
clion_version/module_01/m1ex03/: HumanA.cpp  HumanA.hpp  Weapon.hpp  main.cpp
clion_version/module_01/m1ex04/: CMakeLists.txt  test.txt
clion_version/module_01/m1ex05/: Makefile
clion_version/module_01/m1ex06/: Makefile
clion_version/module_02/m2ex00/: CMakeLists.txt  Fixed.cpp  Fixed.hpp
clion_version/module_02/m2ex01/: CMakeLists.txt  Fixed.cpp  main.cpp
clion_version/module_02/m2ex02/: CMakeLists.txt  Fixed.cpp  Fixed.hpp  main.cpp
clion_version/module_03/m3ex00/: ClapTrap.hpp
clion_version/module_03/m3ex01/: CMakeLists.txt  main.cpp
clion_version/module_03/m3ex02/: ScavTrap.hpp  main.cpp
module_00/ev/: ContactClass.cpp  Makefile  PhonebookClass.hpp  main.cpp
module_00/ex00/: CMakeLists.txt  Makefile
module_00/ex01/: Contact.cpp  Makefile  PhonebookClass.hpp  main.cpp
module_00/ex02/: Makefile  ex02  tests.cpp
module_01/ex00/: CMakeLists.txt  Zombie.cpp  Zombie.hpp  newZombie.cpp
module_01/m1ex00/: Makefile  RandomChump.cpp  Zombie.cpp  Zombie.hpp
module_01/m1ex01/: CMakeLists.txt  Makefile  ex01
module_01/m1ex02/: main.cpp
module_01/m1ex03/: CMakeLists.txt  HumanB.cpp  HumanB.hpp  Weapon.cpp
module_01/m1ex04/: Makefile  main.cpp
module_01/m1ex05/: CMakeLists.txt  Harl.cpp  Harl.hpp  Makefile  main.cpp
module_01/m1ex06/: CMakeLists.txt  Harl.cpp  harlFilter
module_02/m2ex00/: CMakeLists.txt  Fixed.cpp  main.cpp
module_02/m2ex01/: Fixed.cpp  Fixed.hpp
module_02/m2ex02/: Fixed.cpp  Fixed.hpp  main.cpp
module_03/m3ex00/: CMakeLists.txt  ClapTrap.cpp  Makefile  main.cpp
module_03/m3ex01/: CMakeLists.txt  ClapTrap.cpp  Makefile  ScavTrap.cpp  ScavTrap.hpp
module_03/m3ex02/: CMakeLists.txt  ClapTrap.cpp  FragTrap.cpp  ScavTrap.cpp
module_03/m3ex03/: CMakeLists.txt  ClapTrap.hpp  DaimondTrap.cpp  DaimondTrap.hpp  FragTrap.cpp  Makefile  ScavTrap.cpp  ScavTrap.hpp
module_04/m4ex00/: Animal.cpp  Animal.hpp  CMakeLists.txt  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  WrongAnimal.cpp  WrongAnimal.hpp  WrongCat.cpp  WrongCat.hpp  main.cpp
module_04/m4ex01/: Animal.cpp  Animal.hpp  Brain.cpp  Brain.hpp  CMakeLists.txt  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  WrongCat.cpp  main.cpp
module_04/m4ex02/: AAnimal.cpp  AAnimal.hpp  Brain.cpp  CMakeLists.txt  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  main.cpp
module_04/m4ex03/: Amateria.cpp  Amateria.hpp  CMakeLists.txt  Cure.hpp  ICharacter.cpp  Ice.cpp  Makefile
module_05/m5ex00/: Bureaucrat.cpp  Bureaucrat.hpp  CMakeLists.txt  Makefile  ex00  main.cpp
module_05/m5ex01/: Bureaucrat.cpp  Bureaucrat.hpp  CMakeLists.txt  Form.cpp  Form.hpp  Makefile  main.cpp
module_05/m5ex02/: Bureaucrat.cpp  Bureaucrat.hpp  CMakeLists.txt  Form.cpp  Form.hpp  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  ex02  main.cpp
module_05/m5ex03/: CMakeLists.txt  Intern.cpp  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.cpp  main.cpp
module_06/m6ex0/: CMakeLists.txt  Convert.cpp  Convert.hpp
module_06/m6ex00/: CMakeLists.txt  Convert.cpp  Convert.hpp  Makefile  convert  convert.cpp  convert.hpp  ex00  main.cpp  main.d
module_06/m6ex01/: CMakeLists.txt  Makefile  Serialize.cpp  Serialize.d  ex01  main.cpp
module_06/m6ex02/: Makefile  main.cpp
module_06/vincent/: vincent.cpp  vincent.hpp
module_07/m7ex00/: CMakeLists.txt  main.cpp  whatever.hpp
module_07/m7ex01/: Makefile  iter.hpp  main.cpp
module_07/m7ex02/: Array.hpp  main.cpp
module_08/: testm8ex01.cpp
module_08/m8ex00/: CMakeLists.txt  easyfind.hpp  main.cpp
module_08/m8ex01/: CMakeLists.txt  Makefile  Span.cpp  Span.hpp  main.cpp
module_08/m8ex02/: Makefile  MutantStack.hpp  main.cpp  main.d
(+288 files in other folders)
