cmake_minimum_required(VERSION 3.17)
project(CPP)
add_subdirectory(module_00/ex00)
add_subdirectory(module_00/ex01)
add_subdirectory(module_00/ex02)
add_subdirectory(module_01/m1ex00)
add_subdirectory(module_01/m1ex01)
add_subdirectory(module_01/m1ex02)
add_subdirectory(module_01/m1ex03)



#add_subdirectory(practise)
