cmake_minimum_required(VERSION 3.17)
project(CPP)
add_subdirectory(module_00/ex00)
add_subdirectory(module_00/ex01)
add_subdirectory(module_00/ex02)
add_subdirectory(module_01/m1ex00)
add_subdirectory(module_01/m1ex01)
add_subdirectory(module_01/m1ex02)
add_subdirectory(module_01/m1ex03)
add_subdirectory(module_01/m1ex04)
add_subdirectory(module_01/m1ex05)
add_subdirectory(module_01/m1ex06)
add_subdirectory(module_02/m2ex00)
add_subdirectory(module_02/m2ex01)
add_subdirectory(module_02/m2ex02)
add_subdirectory(module_03/m3ex00)
add_subdirectory(module_03/m3ex01)
add_subdirectory(module_03/m3ex02)
add_subdirectory(module_03/m3ex03)
add_subdirectory(module_04/m4ex00)
add_subdirectory(module_04/m4ex01)
add_subdirectory(module_04/m4ex02)
add_subdirectory(module_05/m5ex00)
add_subdirectory(module_05/m5ex01)
add_subdirectory(module_05/m5ex02)
add_subdirectory(module_05/m5ex03)
#add_subdirectory(practise)
